--- a/helptux/static/bower.json
+++ b/helptux/static/bower.json
@@ -19,6 +19,6 @@
   "dependencies": {
     "bootstrap": "~3.3.6",
     "angular": "~1.4.8",
-    "angular-resource": ""
+    "angular-resource": "*"
   }
 }
